# format-mapper

./: Cargo.toml  README.md
src/: cli.rs  config.rs  id_generator.rs  main.rs  writer_json.rs
